[gd_scene load_steps=7 format=2]

[ext_resource path="res://elements/JackIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://elements/dial/Dial.tscn" type="PackedScene" id=2]
[ext_resource path="res://elements/ModuleDragger.tscn" type="PackedScene" id=3]
[ext_resource path="res://elements/signalgen/signalgen.svg" type="Texture" id=4]
[ext_resource path="res://elements/signalgen/SignalGen.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 181, 418 )

[node name="SigGen" type="Node2D"]
script = ExtResource( 5 )

[node name="sequencer" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )
centered = false

[node name="ModuleDragger" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ModuleDragger"]
position = Vector2( 175, 420 )
shape = SubResource( 1 )

[node name="JackIn" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 280 )
default_state = 1.0

[node name="JackIn2" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 560 )
default_state = 1.0

[node name="Sig1" parent="." instance=ExtResource( 2 )]
position = Vector2( 140, 140 )
max_angle = 135.0
min_angle = -180.0
rounding = 45.0
init_rot = -180.0

[node name="Sig2" parent="." instance=ExtResource( 2 )]
position = Vector2( 140, 420 )
max_angle = 135.0
min_angle = -180.0
rounding = 45.0
init_rot = -180.0

[node name="Out1_1" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 35 )
rotation = 3.14159
is_input = false

[node name="Out1_2" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 105 )
rotation = 3.14159
is_input = false

[node name="Out1_3" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 175 )
rotation = 3.14159
is_input = false

[node name="Out1_4" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 245 )
rotation = 3.14159
is_input = false

[node name="Out2_1" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 315 )
rotation = 3.14159
is_input = false

[node name="Out2_2" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 385 )
rotation = 3.14159
is_input = false

[node name="Out2_3" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 455 )
rotation = 3.14159
is_input = false

[node name="Out2_4" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 525 )
rotation = 3.14159
is_input = false

[node name="OutS_1" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 595 )
rotation = 3.14159
is_input = false

[node name="OutS_2" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 665 )
rotation = 3.14159
is_input = false

[node name="OutS_3" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 735 )
rotation = 3.14159
is_input = false

[node name="OutS_4" parent="." instance=ExtResource( 1 )]
position = Vector2( 348, 805 )
rotation = 3.14159
is_input = false
